# telepathy-rs

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  docker-compose.lint-test.yml
src/: error.rs  file.rs  lib.rs  util.rs
src/stickers/: api.rs  client.rs  mask.rs  mod.rs  sticker.rs
